<resources>
    <string name="app_name">21.ImageViewScaleType</string>
    <string name="desc">rotate to see difference Size</string>
    <string name="imageView">imageView ScaleType</string>
    <string name="matrix">MATRIX</string>
    <string name="fit_xy">FIT_XY</string>
    <string name="fit_start">FIT_START</string>
    <string name="fit_center">FIT_CENTER</string>
    <string name="fit_end">FIT_END</string>
    <string name="center">CENTER</string>
    <string name="center_crop">CENTER_CROP</string>
    <string name="center_inside">CENTER_INSIDE</string>
</resources>
